Fix line spacing and remove commented code

--- a/connect_therapy/static/connect_therapy/css/index.css
+++ b/connect_therapy/static/connect_therapy/css/index.css
@@ -1,17 +1,5 @@
 
 .carousel-item img {
-    /* height: 60%;
-     vertical-align: center;
-     margin: auto;
-     width: 80%;
-     padding: 10px;*/
-
-    /*margin: auto;
-    vertical-align: center;
-    width: auto;
-  max-width: 100%;
-    height: 70%;*/
-
     width: 100%;
     height: 100%;
     display: block;
@@ -154,9 +142,6 @@
     color: #FFFFFF;
 
 }
-
-<!--
--->
 
 .feature-content {
 
